<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reto3Activity">

    <TextView
        android:id="@+id/tReto3"
        android:layout_width="348dp"
        android:layout_height="109dp"
        android:layout_marginTop="36dp"
        android:text="@string/tReto3"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/tNum2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tNum1"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/tNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/tNum1"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tReto3"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tvNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvNum1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tNum1"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tNum1" />

    <TextView
        android:id="@+id/tvNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNum2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tNum2"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNum1"
        app:layout_constraintVertical_bias="0.076" />

    <ImageView
        android:id="@+id/maths"
        android:layout_width="167dp"
        android:layout_height="157dp"
        android:layout_marginTop="123dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/maths"
        app:layout_constraintBottom_toTopOf="@+id/tNum1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tReto3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/maths" />

    <ImageButton
        android:id="@+id/bSuma"
        android:layout_width="92dp"
        android:layout_height="91dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/bSuma"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNum2"
        app:layout_constraintVertical_bias="0.123"
        app:srcCompat="@drawable/addition" />

    <ImageButton
        android:id="@+id/bResta"
        android:layout_width="92dp"
        android:layout_height="91dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/bResta"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/bSuma"
        app:layout_constraintTop_toTopOf="@+id/bSuma"
        app:srcCompat="@drawable/substraction" />

    <ImageButton
        android:id="@+id/bMultiplicacion"
        android:layout_width="92dp"
        android:layout_height="91dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/bmultiplicacion"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/bResta"
        app:layout_constraintTop_toTopOf="@+id/bResta"
        app:srcCompat="@drawable/multiplication" />

    <ImageButton
        android:id="@+id/bDivision"
        android:layout_width="92dp"
        android:layout_height="91dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/bDivision"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/bMultiplicacion"
        app:layout_constraintTop_toTopOf="@+id/bMultiplicacion"
        app:srcCompat="@drawable/division" />

    <ImageButton
        android:id="@+id/bIgual"
        android:layout_width="92dp"
        android:layout_height="91dp"
        android:layout_marginTop="91dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/bIgual"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bMultiplicacion"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/equals" />

</androidx.constraintlayout.widget.ConstraintLayout>